package edu.fiuba.algo3.modelo;


import java.util.HashMap;


public class Banco extends LugarDeInteres{

    public Banco(){
        super();
        this.pistas = new HashMap<String, Pista>();
    }
}
