package edu.fiuba.algo3.modelo;

import java.util.HashMap;


public class Biblioteca extends LugarDeInteres{

    public Biblioteca(){
        super();
        this.pistas = new HashMap<String, Pista>();
    }
}
