package edu.fiuba.algo3.modelo;


import java.util.HashMap;


public class Bolsa extends LugarDeInteres{

    public Bolsa(){
        super();
        this.pistas = new HashMap<String, Pista>();
    }
}