package edu.fiuba.algo3.modelo;

public interface ObjetoRobado {
    String mostrarNombre();
}
