package edu.fiuba.algo3.modelo;

public interface Pista {
    void mostrarPista();
}
