package edu.fiuba.algo3.modelo;

import java.util.HashMap;

public class Puerto extends LugarDeInteres{

    public Puerto(){
        super();
        this.pistas = new HashMap<String, Pista>();
    }
}
