@startuml
title Jerarquias de Interfaces
interface GradoDePolicia{
    + calcularTiempoDeViaje(kilometros) : int
    + buscarPista(pistas{String, Pista}) : Pista
}
class Novato{}
class Detective{}
class Investigador{}
class Sargento{}


class LugarDeInteres{
    + # pistas{String, Pista}
    + visitar(grado)
    + obtenerPista(grado) : Pista
    + agregarPista(dificultad, descripcion)
}

class Banco{}
class Bolsa{}
class Biblioteca{}
class Aeropuerto{}
class Puerto{}

interface Pista{
    + mostrarPista()
}
class PistaFacil{}
class PistaMedia{}
class PistaDificil{}

interface ObjetoRobado{
    + mostrarNombre() : String
}

class ObjetoComun{}
class ObjetoValioso{}
class ObjetoMuyValioso{}

GradoDePolicia <|.. Novato
GradoDePolicia <|.. Detective
GradoDePolicia <|.. Investigador
GradoDePolicia <|.. Sargento

Pista <|.. PistaFacil
Pista <|.. PistaMedia
Pista <|.. PistaDificil

LugarDeInteres <|-- Banco
LugarDeInteres <|-- Bolsa
LugarDeInteres <|-- Biblioteca
LugarDeInteres <|-- Aeropuerto
LugarDeInteres <|-- Puerto

ObjetoRobado <|.. ObjetoComun
ObjetoRobado <|.. ObjetoValioso
ObjetoRobado <|.. ObjetoMuyValioso

@enduml